Add hero section with welcome message and CTA

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,17 @@
             </ul>
         </nav>
     </header>
+
+    <main class="main">
+        <section class="hero">
+            <div class="hero__content">
+                <h1 class="hero__title">Velkommen til Elektronikkbutikken!</h1>
+                <p class="hero__subtitle">Din favorittdestinasjon for den beste elektronikken til fantastiske priser.</p>
+                <a class="hero__cta" href="./products.html">Se produktene våre</a>
+            </div>
+        </section>
+    </main>
+    
     
 </body>
 </html>
