Add product sort options for product page

--- a/src/products.html
+++ b/src/products.html
@@ -25,6 +25,23 @@
             </ul>
         </nav>
     </header>
+
+      <!-- Main Section -->
+      <main class="main">
+        <!-- Product Sort Options -->
+        <section class="sort">
+            <h1 class="sort__title">Våre Produkter</h1>
+            <div class="sort__options">
+                <label class="sort__label" for="sort">Sorter etter:</label>
+                <select class="sort__select" id="sort">
+                    <option value="price-desc">Dyrest - Billigst</option>
+                    <option value="price-asc">Billigst - Dyrest</option>
+                    <option value="rating">Best Rated</option>
+                </select>
+            </div>
+        </section>
+
+    </main>
     
 </body>
 </html>
