--- a/src/order.html
+++ b/src/order.html
@@ -12,5 +12,18 @@
     <link rel="stylesheet" href="./css/order.css">
 </head>
 <body>
+    <header class="header">
+        <nav class="header__nav">
+            <ul class="header__nav-list">
+                <li class="header__nav-item"><a class="header__nav-link" href="./index.html">Home</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" href="./products.html">Produkter</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" href="./order.html">Bestilling</a></li>
+                <li class="header__nav-item header__nav-item--cart">
+                    <a class="header__nav-link" href="./order.html">🛒 Handlekurv (<span id="cart-count">0</span>)</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    
 </body>
 </html>
