fixed the src tag for img

--- a/src/index.html
+++ b/src/index.html
@@ -61,19 +61,19 @@
     <div class="featured-products__list">
         <!----------------------------------------- Produkt 1 ----------------------------------------->
         <div class="featured-products__item">
-            <img class="featured-products__item-image" src="./assets/images/product1.jpg" alt="Smarttelefon X100">
+            <img class="featured-products__item-image" src="./assets/image/product1.jpg" alt="Smarttelefon X100">
             <h3 class="featured-products__item-title">Smarttelefon X100</h3>
             <p class="featured-products__item-price">Pris: 7500 NOK</p>
         </div>
         <!----------------------------------------- Produkt 2 ----------------------------------------->
         <div class="featured-products__item">
-            <img class="featured-products__item-image" src="./assets/images/product5.jpg" alt="4K Skjerm UltraView">
+            <img class="featured-products__item-image" src="./assets/image/product5.jpg" alt="4K Skjerm UltraView">
             <h3 class="featured-products__item-title">4K Skjerm UltraView</h3>
             <p class="featured-products__item-price">Pris: 6999 NOK</p>
         </div>
         <!----------------------------------------- Produkt 3 ----------------------------------------->
         <div class="featured-products__item">
-            <img class="featured-products__item-image" src="./assets/images/product10.jpg" alt="Strømforsterker AudioMax">
+            <img class="featured-products__item-image" src="./assets/image/product10.jpg" alt="Strømforsterker AudioMax">
             <h3 class="featured-products__item-title">Strømforsterker AudioMax</h3>
             <p class="featured-products__item-price">Pris: 3299 NOK</p>
         </div>
