fixed ID for the order form, now the page directs you back to the start page after submitting order

--- a/src/order.html
+++ b/src/order.html
@@ -42,7 +42,7 @@
         <!---------------------------------------------  Order Form --------------------------------------------->
         <section class="order-form">
             <h2 class="order-form__title">Fullfør Bestillingen</h2>
-            <form class="order-form__form" action="/submit-order" method="post">
+            <form class="order-form__form" action="/submit-order" method="post" id="orderForm">
                 <div class="order-form__group">
                     <label class="order-form__label" for="name">Navn:</label>
                     <input class="order-form__input" type="text" id="name" name="name" required>
